# titan-toti-app

./: .gitignore  README.md
scripts/: create_release.sh
src/: index.html  main.js  styles.css  update.css  update.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  agents.rs  lib.rs  main.rs  memory.rs  settings.rs  skills.rs  update.rs  vision.rs
src/assets/: brain.glb  brain_realistic.glb
